--- a/onYOURway/onYOURway.csproj
+++ b/onYOURway/onYOURway.csproj
@@ -258,8 +258,10 @@
     <Content Include="App\app.Release.config.js" />
     <Content Include="App\app.Debug.config.js" />
     <Content Include="App\appConfig.base.js" />
+    <Content Include="App\services\geoUtils.js" />
     <Content Include="App\services\location.js" />
-    <Content Include="App\services\locationProviders\OSM.js" />
+    <Content Include="App\services\providers\routing-yours.js" />
+    <Content Include="App\services\providers\OSM.not_used.js" />
     <Content Include="App\services\storage.js" />
     <Content Include="App\services\_ko.bindingHandlers.js" />
     <Compile Include="App_Start\BundleConfig.cs" />
