vonMorgen - select2 added

--- a/onYOURway.Tests/App.config
+++ b/onYOURway.Tests/App.config
@@ -10,8 +10,12 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
 
   <connectionStrings>
-    <add name="onYOURway" connectionString="YOUR CONNECTIONSTRING HERE" providerName="System.Data.SqlClient" />
-    <add name="onYOURwayEntities" connectionString="metadata=res://*/Models.onYOURway.csdl|res://*/Models.onYOURway.ssdl|res://*/Models.onYOURway.msl;provider=System.Data.SqlClient;provider connection string=&quot;YOUR CONNECTIONSTRING HERE&quot;" providerName="System.Data.EntityClient" />
+    <add name="onYOURway"
+      connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\Flo\Source\Repos\onYOURway\onYOURway\App_Data\onYOURway.mdf;Integrated Security=True;Connect Timeout=30"
+      providerName="System.Data.SqlClient"/>
+    <add name="onYOURwayEntities"
+      connectionString="metadata=res://*/Models.onYOURway.csdl|res://*/Models.onYOURway.ssdl|res://*/Models.onYOURway.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=(LocalDB)\v11.0;AttachDbFilename=C:\Users\Flo\Source\Repos\onYOURway\onYOURway\App_Data\onYOURway.mdf;Integrated Security=True;Connect Timeout=30&quot;"
+      providerName="System.Data.EntityClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
