--- a/onYOURway.Tests/onYOURway.Tests.csproj
+++ b/onYOURway.Tests/onYOURway.Tests.csproj
@@ -116,6 +116,7 @@
       <SubType>Designer</SubType>
     </Content>
     <None Include="packages.config" />
+    <None Include="WebQuery.ps1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\onYOURway\onYOURway.csproj">
