--- a/onYOURway/onYOURway.csproj
+++ b/onYOURway/onYOURway.csproj
@@ -255,8 +255,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App\app.config.js" />
-    <Content Include="App\app.Debug.config.js" />
-    <Content Include="App\app.Release.config.js" />
     <Content Include="App\appConfig.base.js" />
     <Content Include="App\images\vonMorgen\photo-1.PNG" />
     <Content Include="App\images\vonMorgen\photo-2.PNG" />
@@ -398,6 +396,7 @@
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
     <Compile Include="App_Start\Startup.cs" />
+    <Content Include="App\themes\vonMorgen-beta\bootstrap.css" />
     <Content Include="App\views\my\siteCollector.js" />
     <Content Include="App\views\my\siteCollector.html" />
     <Content Include="App\views\my\wizardEdit.BAK.html" />
@@ -408,8 +407,8 @@
     <Content Include="App\views\vonMorgen\_map.js" />
     <Content Include="App\views\vonMorgen\_nav.html" />
     <Content Include="App\views\vonMorgen\_nav.js" />
-    <Content Include="App\views\vonMorgen\_shell.html" />
-    <Content Include="App\views\vonMorgen\_shell.js" />
+    <Content Include="App\themes\vonMorgen-beta\shell.html" />
+    <Content Include="App\themes\vonMorgen-beta\shell.js" />
     <Content Include="App\_libraries\leaflet\images\spritesheet-2x.png" />
     <Content Include="App\_libraries\leaflet\images\spritesheet.png" />
     <Content Include="App\_libraries\leaflet\leaflet.draw-src.js" />
@@ -466,15 +465,26 @@
     <Content Include="App\_styles\images\select2x2.png" />
     <Content Include="App\_styles\select2-bootstrap.css" />
     <Content Include="App\_styles\select2.css" />
-    <Content Include="App\_styles\themes\onYOURway2\_onYOURway.css.map">
-      <DependentUpon>_onYOURway.css</DependentUpon>
+    <Content Include="App\themes\vonMorgen\css\bootstrap.css" />
+    <Content Include="App\themes\vonMorgen\css\vonMorgen.css">
+      <DependentUpon>vonMorgen.less</DependentUpon>
+    </Content>
+    <Content Include="App\themes\vonMorgen\css\vonMorgen.min.css">
+      <DependentUpon>vonMorgen.css</DependentUpon>
+    </Content>
+    <Content Include="App\themes\onYOURway\css\onYOURway.css.map">
+      <DependentUpon>onYOURway.css</DependentUpon>
     </Content>
     <Content Include="App\_libraries\select2\bower.json" />
     <Content Include="App\_libraries\select2\component.json" />
     <Content Include="App\_libraries\select2\composer.json" />
     <Content Include="App\_libraries\select2\package.json" />
     <Content Include="App\_libraries\select2\select2.jquery.json" />
-    <None Include="App\_styles\themes\onYOURway2\_onYOURway.less" />
+    <Content Include="App\themes\vonMorgen\css\vonMorgen.css.map">
+      <DependentUpon>vonMorgen.css</DependentUpon>
+    </Content>
+    <Content Include="App\themes\vonMorgen\css\vonMorgen.less" />
+    <None Include="App\themes\onYOURway\css\onYOURway.less" />
     <Content Include="App\views\about\_preview.html" />
     <Content Include="App\views\about\_preview.js" />
     <Content Include="App\views\my\wizardNew.BAK.html" />
@@ -497,8 +507,8 @@
     <Content Include="App\_styles\jquery-ui\images\ui-icons_ffd27a_256x240.png" />
     <Content Include="App\_styles\jquery-ui\images\ui-icons_ffffff_256x240.png" />
     <Content Include="App\_styles\jquery-ui\jquery-ui-1.10.4.custom.css" />
-    <Content Include="App\_styles\themes\onYOURway2\_onYOURway.min.css">
-      <DependentUpon>_onYOURway.css</DependentUpon>
+    <Content Include="App\themes\onYOURway\css\onYOURway.min.css">
+      <DependentUpon>onYOURway.css</DependentUpon>
     </Content>
     <Content Include="App\views\about\region.js" />
     <Content Include="App\views\about\venture.js" />
@@ -514,19 +524,16 @@
     <Content Include="App\views\about\venture.html" />
     <Content Include="App\views\about\explorer.html" />
     <Content Include="App\views\_map.html" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\variables.css">
-      <DependentUpon>variables.less</DependentUpon>
-    </Content>
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\variables.min.css">
-      <DependentUpon>variables.css</DependentUpon>
-    </Content>
-    <Content Include="App\_styles\themes\vonMorgen\_onYOURway.css">
+    <Content Include="App\themes\vonMorgen-beta\_onYOURway.css">
       <DependentUpon>_onYOURway.less</DependentUpon>
     </Content>
-    <Content Include="App\_styles\themes\vonMorgen\_onYOURway.min.css">
+    <Content Include="App\themes\vonMorgen-beta\_onYOURway.min.css">
       <DependentUpon>_onYOURway.css</DependentUpon>
     </Content>
-    <Content Include="App\_styles\themes\_shared.min.css">
+    <Content Include="App\themes\vonMorgen\images\logoanimation.gif" />
+    <Content Include="App\themes\vonMorgen\shell.html" />
+    <Content Include="App\themes\vonMorgen\shell.js" />
+    <Content Include="App\themes\_shared.min.css">
       <DependentUpon>_shared.css</DependentUpon>
     </Content>
     <Content Include="App_Data\onYOURway.XML" />
@@ -561,8 +568,8 @@
     <Content Include="App\_libraries\owl.carousel.js" />
     <Content Include="App\_styles\owl.theme.css" />
     <Content Include="App\_styles\typeahead.js-bootstrap.css" />
-    <Content Include="App\_styles\themes\onYOURway2\_onYOURway.css">
-      <DependentUpon>_onYOURway.less</DependentUpon>
+    <Content Include="App\themes\onYOURway\css\onYOURway.css">
+      <DependentUpon>onYOURway.less</DependentUpon>
     </Content>
     <Content Include="App\_styles\toastr.css" />
     <Content Include="App\_styles\toastr.min.css" />
@@ -678,7 +685,7 @@
     <Content Include="App\services\logger.js" />
     <Content Include="App\services\platform.js" />
     <Content Include="App\views\_nav.js" />
-    <Content Include="App\views\_shell.js" />
+    <Content Include="App\themes\onYOURway\shell.js" />
     <Content Include="App\views\about\impress.html" />
     <Content Include="App\views\about\privacy.html" />
     <Content Include="App\views\about\onyourway.html" />
@@ -688,10 +695,10 @@
     <Content Include="App\views\my\profile.html" />
     <Content Include="App\views\my\shoppingList.html" />
     <Content Include="App\views\_nav.html" />
-    <Content Include="App\views\_shell.html" />
+    <Content Include="App\themes\onYOURway\shell.html" />
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="App\_styles\themes\onYOURway2\bootstrap.css" />
+    <Content Include="App\themes\onYOURway\css\bootstrap.css" />
     <Content Include="App\_styles\durandal.css" />
     <Content Include="App\_styles\fonts\fontawesome-webfont.svg" />
     <Content Include="App\_styles\ie10mobile.css" />
@@ -782,74 +789,22 @@
     <Content Include="App\_styles\fonts\glyphicons-halflings-regular.woff" />
     <Content Include="App\views\my\registration.html" />
     <Content Include="App\views\my\registrationExt.html" />
-    <Content Include="App\_styles\themes\vonMorgen\_vonMorgen.less" />
-    <Content Include="App\_styles\themes\vonMorgen\_vonMorgen.css">
+    <Content Include="App\themes\vonMorgen-beta\_vonMorgen.less" />
+    <Content Include="App\themes\vonMorgen-beta\_vonMorgen.css">
       <DependentUpon>_vonMorgen.less</DependentUpon>
     </Content>
-    <Content Include="App\_styles\themes\vonMorgen\_vonMorgen.min.css">
+    <Content Include="App\themes\vonMorgen-beta\_vonMorgen.min.css">
       <DependentUpon>_vonMorgen.css</DependentUpon>
     </Content>
-    <Content Include="App\_styles\themes\vonMorgen\_onYOURway.css.map">
+    <Content Include="App\themes\vonMorgen-beta\_onYOURway.css.map">
       <DependentUpon>_onYOURway.css</DependentUpon>
     </Content>
-    <Content Include="App\_styles\themes\vonMorgen\_onYOURway.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\alerts.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\badges.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\bootstrap.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\bootstrap.css">
-      <DependentUpon>bootstrap.less</DependentUpon>
-    </Content>
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\bootstrap.min.css">
-      <DependentUpon>bootstrap.css</DependentUpon>
-    </Content>
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\breadcrumbs.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\button-groups.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\buttons.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\carousel.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\close.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\code.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\component-animations.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\dropdowns.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\forms.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\glyphicons.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\grid.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\input-groups.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\jumbotron.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\labels.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\list-group.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\media.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\mixins.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\modals.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\navbar.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\navs.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\normalize.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\pager.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\pagination.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\panels.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\popovers.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\print.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\progress-bars.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\responsive-utilities.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\scaffolding.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\tables.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\theme.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\thumbnails.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\tooltip.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\type.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\utilities.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\variables.less" />
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\wells.less" />
-    <Content Include="App\_styles\themes\vonMorgen\_vonMorgen.css.map">
-      <DependentUpon>_vonMorgen.css</DependentUpon>
-    </Content>
-    <Content Include="App\_styles\themes\vonMorgen\bootstrap\bootstrap.css.map">
-      <DependentUpon>bootstrap.css</DependentUpon>
-    </Content>
-    <Content Include="App\_styles\themes\_shared.less" />
-    <Content Include="App\_styles\themes\_shared.css">
+    <Content Include="App\themes\vonMorgen-beta\_onYOURway.less" />
+    <Content Include="App\themes\_shared.less" />
+    <Content Include="App\themes\_shared.css">
       <DependentUpon>_shared.less</DependentUpon>
     </Content>
-    <Content Include="App\_styles\themes\_shared.css.map">
+    <Content Include="App\themes\_shared.css.map">
       <DependentUpon>_shared.css</DependentUpon>
     </Content>
     <None Include="Properties\PublishProfiles\onYOURway.at.pubxml" />
@@ -890,6 +845,9 @@
   <ItemGroup>
     <Folder Include="App\images\about\project\" />
     <Folder Include="App\models\" />
+    <Folder Include="App\themes\onYOURway\images\" />
+    <Folder Include="App\themes\vonMorgen\fonts\" />
+    <Folder Include="App\views\onYOURway\" />
     <Folder Include="App_Code\" />
     <Folder Include="Content\images\" />
   </ItemGroup>
@@ -939,6 +897,7 @@
     <TransformXml Source="WebConfig.base.config" Transform="Web.$(Configuration).config" Destination="Web.config" StackTrace="true" />
   </Target>
   <PropertyGroup>
-    <PostBuildEvent>copy $(ProjectDir)App\app.$(ConfigurationName).config.js $(ProjectDir)App\app.config.js /y</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
 </Project>
