add: started styling the theme vonMorgen

--- a/onYOURway/onYOURway.csproj
+++ b/onYOURway/onYOURway.csproj
@@ -398,6 +398,7 @@
     <Compile Include="Results\ChallengeResult.cs" />
     <Compile Include="App_Start\Startup.cs" />
     <Content Include="App\themes\vonMorgen-beta\bootstrap.css" />
+    <Content Include="App\themes\vonMorgen\fonts\source-sans-pro.css" />
     <Content Include="App\views\my\siteCollector.js" />
     <Content Include="App\views\my\siteCollector.html" />
     <Content Include="App\views\my\wizardEdit.BAK.html" />
@@ -579,6 +580,66 @@
     <Content Include="App\_libraries\app\app.datamodel.js" />
     <Content Include="Content\documents\onYOURway - Projektinformation Regionalpartner.pdf" />
     <Content Include="Content\documents\onYOURway - Was ist faul.pdf" />
+    <Content Include="App\themes\vonMorgen\fonts\EOT\SourceSansPro-Black.eot" />
+    <Content Include="App\themes\vonMorgen\fonts\EOT\SourceSansPro-BlackIt.eot" />
+    <Content Include="App\themes\vonMorgen\fonts\EOT\SourceSansPro-Bold.eot" />
+    <Content Include="App\themes\vonMorgen\fonts\EOT\SourceSansPro-BoldIt.eot" />
+    <Content Include="App\themes\vonMorgen\fonts\EOT\SourceSansPro-ExtraLight.eot" />
+    <Content Include="App\themes\vonMorgen\fonts\EOT\SourceSansPro-ExtraLightIt.eot" />
+    <Content Include="App\themes\vonMorgen\fonts\EOT\SourceSansPro-It.eot" />
+    <Content Include="App\themes\vonMorgen\fonts\EOT\SourceSansPro-Light.eot" />
+    <Content Include="App\themes\vonMorgen\fonts\EOT\SourceSansPro-LightIt.eot" />
+    <Content Include="App\themes\vonMorgen\fonts\EOT\SourceSansPro-Regular.eot" />
+    <Content Include="App\themes\vonMorgen\fonts\EOT\SourceSansPro-Semibold.eot" />
+    <Content Include="App\themes\vonMorgen\fonts\EOT\SourceSansPro-SemiboldIt.eot" />
+    <Content Include="App\themes\vonMorgen\fonts\OTF\SourceSansPro-Black.otf" />
+    <Content Include="App\themes\vonMorgen\fonts\OTF\SourceSansPro-BlackIt.otf" />
+    <Content Include="App\themes\vonMorgen\fonts\OTF\SourceSansPro-Bold.otf" />
+    <Content Include="App\themes\vonMorgen\fonts\OTF\SourceSansPro-BoldIt.otf" />
+    <Content Include="App\themes\vonMorgen\fonts\OTF\SourceSansPro-ExtraLight.otf" />
+    <Content Include="App\themes\vonMorgen\fonts\OTF\SourceSansPro-ExtraLightIt.otf" />
+    <Content Include="App\themes\vonMorgen\fonts\OTF\SourceSansPro-It.otf" />
+    <Content Include="App\themes\vonMorgen\fonts\OTF\SourceSansPro-Light.otf" />
+    <Content Include="App\themes\vonMorgen\fonts\OTF\SourceSansPro-LightIt.otf" />
+    <Content Include="App\themes\vonMorgen\fonts\OTF\SourceSansPro-Regular.otf" />
+    <Content Include="App\themes\vonMorgen\fonts\OTF\SourceSansPro-Semibold.otf" />
+    <Content Include="App\themes\vonMorgen\fonts\OTF\SourceSansPro-SemiboldIt.otf" />
+    <Content Include="App\themes\vonMorgen\fonts\TTF\SourceSansPro-Black.ttf" />
+    <Content Include="App\themes\vonMorgen\fonts\TTF\SourceSansPro-BlackIt.ttf" />
+    <Content Include="App\themes\vonMorgen\fonts\TTF\SourceSansPro-Bold.ttf" />
+    <Content Include="App\themes\vonMorgen\fonts\TTF\SourceSansPro-BoldIt.ttf" />
+    <Content Include="App\themes\vonMorgen\fonts\TTF\SourceSansPro-ExtraLight.ttf" />
+    <Content Include="App\themes\vonMorgen\fonts\TTF\SourceSansPro-ExtraLightIt.ttf" />
+    <Content Include="App\themes\vonMorgen\fonts\TTF\SourceSansPro-It.ttf" />
+    <Content Include="App\themes\vonMorgen\fonts\TTF\SourceSansPro-Light.ttf" />
+    <Content Include="App\themes\vonMorgen\fonts\TTF\SourceSansPro-LightIt.ttf" />
+    <Content Include="App\themes\vonMorgen\fonts\TTF\SourceSansPro-Regular.ttf" />
+    <Content Include="App\themes\vonMorgen\fonts\TTF\SourceSansPro-Semibold.ttf" />
+    <Content Include="App\themes\vonMorgen\fonts\TTF\SourceSansPro-SemiboldIt.ttf" />
+    <Content Include="App\themes\vonMorgen\fonts\WOFF\OTF\SourceSansPro-Black.otf.woff" />
+    <Content Include="App\themes\vonMorgen\fonts\WOFF\OTF\SourceSansPro-BlackIt.otf.woff" />
+    <Content Include="App\themes\vonMorgen\fonts\WOFF\OTF\SourceSansPro-Bold.otf.woff" />
+    <Content Include="App\themes\vonMorgen\fonts\WOFF\OTF\SourceSansPro-BoldIt.otf.woff" />
+    <Content Include="App\themes\vonMorgen\fonts\WOFF\OTF\SourceSansPro-ExtraLight.otf.woff" />
+    <Content Include="App\themes\vonMorgen\fonts\WOFF\OTF\SourceSansPro-ExtraLightIt.otf.woff" />
+    <Content Include="App\themes\vonMorgen\fonts\WOFF\OTF\SourceSansPro-It.otf.woff" />
+    <Content Include="App\themes\vonMorgen\fonts\WOFF\OTF\SourceSansPro-Light.otf.woff" />
+    <Content Include="App\themes\vonMorgen\fonts\WOFF\OTF\SourceSansPro-LightIt.otf.woff" />
+    <Content Include="App\themes\vonMorgen\fonts\WOFF\OTF\SourceSansPro-Regular.otf.woff" />
+    <Content Include="App\themes\vonMorgen\fonts\WOFF\OTF\SourceSansPro-Semibold.otf.woff" />
+    <Content Include="App\themes\vonMorgen\fonts\WOFF\OTF\SourceSansPro-SemiboldIt.otf.woff" />
+    <Content Include="App\themes\vonMorgen\fonts\WOFF\TTF\SourceSansPro-Black.ttf.woff" />
+    <Content Include="App\themes\vonMorgen\fonts\WOFF\TTF\SourceSansPro-BlackIt.ttf.woff" />
+    <Content Include="App\themes\vonMorgen\fonts\WOFF\TTF\SourceSansPro-Bold.ttf.woff" />
+    <Content Include="App\themes\vonMorgen\fonts\WOFF\TTF\SourceSansPro-BoldIt.ttf.woff" />
+    <Content Include="App\themes\vonMorgen\fonts\WOFF\TTF\SourceSansPro-ExtraLight.ttf.woff" />
+    <Content Include="App\themes\vonMorgen\fonts\WOFF\TTF\SourceSansPro-ExtraLightIt.ttf.woff" />
+    <Content Include="App\themes\vonMorgen\fonts\WOFF\TTF\SourceSansPro-It.ttf.woff" />
+    <Content Include="App\themes\vonMorgen\fonts\WOFF\TTF\SourceSansPro-Light.ttf.woff" />
+    <Content Include="App\themes\vonMorgen\fonts\WOFF\TTF\SourceSansPro-LightIt.ttf.woff" />
+    <Content Include="App\themes\vonMorgen\fonts\WOFF\TTF\SourceSansPro-Regular.ttf.woff" />
+    <Content Include="App\themes\vonMorgen\fonts\WOFF\TTF\SourceSansPro-Semibold.ttf.woff" />
+    <Content Include="App\themes\vonMorgen\fonts\WOFF\TTF\SourceSansPro-SemiboldIt.ttf.woff" />
     <None Include="App\_libraries\breeze.intellisense.js" />
     <Content Include="App\_libraries\bootstrap-datepicker.js" />
     <Content Include="App\_libraries\bootstrap-tour.js" />
@@ -850,7 +911,6 @@
     <Folder Include="App\images\about\project\" />
     <Folder Include="App\models\" />
     <Folder Include="App\themes\onYOURway\images\" />
-    <Folder Include="App\themes\vonMorgen\fonts\" />
     <Folder Include="App\views\onYOURway\" />
     <Folder Include="App_Code\" />
     <Folder Include="Content\images\" />
